# V1

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh
deploy/: README.md  deploy.md  expose_api.sh  install.sh  logrotate.v5  run_nohup.sh  uninstall.sh
deploy/systemd/: v5-api.service  v5-api.service.tmpl  v5-health.service  v5-health.service.tmpl  v5-health.timer  v5-health.timer.tmpl  v5-trader.service  v5-trader.service.tmpl
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs  liquidity.rs  regime.rs  volume_profile.rs
scripts/: build_snapshot.py  health_check.py  inspect_prompts.py  paper_run.py  run_api.py  run_exec.py  scan_once.py  trigger_probe.py  watchlist_once.py
src/ai/: __init__.py  audit.py  budget.py  client.py  mock.py  prices.py  prompts.py  schemas.py
src/api/: __init__.py  charts.py  server.py
src/core/: __init__.py  config.py  ids.py  lock.py  paths.py  (+2 more)
tests/: conftest.py  test_ai_client.py  test_ai_prompts.py  test_ai_schemas.py  test_api.py  test_broker.py  test_cache.py  test_core.py  test_cost_safety.py  test_downloader_archive.py  test_downloader_rest.py  test_downloader_ws.py  test_exec_loop.py  test_features_flags.py  test_features_layer1.py  test_features_layer3_rust.py  test_features_live.py  test_features_lookahead.py  test_features_peer.py  test_features_pipeline.py  test_features_snapshot.py  test_integration_smoke.py  test_intents.py  test_loops_triggers.py  test_orderbook.py  test_phase14.py  test_position_review.py  test_scanner_reuse.py  test_snapshot_live.py  test_universe.py
(+43 files in other folders)
